# solidity-lam4inv

./: README.md  SimpleLoop.sol  pyproject.toml  test.sol
benchmarks/code/: 1.sol  10.sol  100.sol  101.sol  102.sol  103.sol  104.sol  105.sol  106.sol  107.sol  108.sol  109.sol  11.sol  110.sol  111.sol  112.sol  114.sol  115.sol  116.sol  117.sol  118.sol  12.sol  120.sol  121.sol  123.sol  124.sol  125.sol  126.sol  127.sol  128.sol  129.sol  13.sol  130.sol  131.sol  132.sol  133.sol  134.sol  135.sol  136.sol  137.sol  (+267 more)
benchmarks/code2inv-vc-templates/: 130.txt
benchmarks/cross-checks-templates/: 246.txt  247.txt  248.txt  68.txt
benchmarks/results/: 1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  134.txt  (+272 more)
src/: config.py  main.py  runner.py
src/bmc/: bmc.py  esbmc.py  solc.py
src/code2inv/: code2inv.py
src/code_handler/: code_handler.py  formula_handler.py  solidity_code_handler.py  solidity_formula_handler.py
src/crosscheck/: crosscheck.py
src/generator/: generator.py
src/inv_smt_solver/: inv_smt_solver.py
src/llm/: llm.py  openai.py
src/predicate_filtering/: predicate_filtering.py
src/smt/: solver.py  z3_solver.py
src/utils/: slither.py  utils.py
src/vc/: generator.py  smt.py  solidity_generator.py
src/vc/templates/: vc.tpl
